Allow postgres to save a chathistory
